# anaconda-cli-testing

./: .env.example  .gitignore  README.md  conftest.py  playwright.config.ts  pytest.ini  requirements-pip.txt  requirements.txt  run_pytest_with_cf.py  setup.cfg
.github/workflows/: hub_cli.yml  playwright.yml  test_environments.yml
src/common/: __init__.py  cli_utils.py  conda_helper.py  defaults.py
tests/: test_anaconda_auth_api_key.py  test_anaconda_auth_help.py  test_anaconda_auth_install.py  test_anaconda_auth_version.py  test_anaconda_login.py  test_anaconda_token_install.py  test_anaconda_token_install_reject_condarc.py  test_anaconda_token_install_reject_token.py  test_conda_config_and_search.py  test_conda_version.py  test_error_anaconda_auth_api_key.py
tests/auth/: test_anaconda_auth_api_key.py  test_anaconda_auth_help.py  test_anaconda_auth_install.py  test_anaconda_auth_logout.py  test_anaconda_auth_version.py  test_anaconda_auth_whoami.py  test_anaconda_login.py  test_conda_config_and_search.py  test_conda_version.py  test_error_anaconda_auth_whoami.py
tests/pages/: mini-cart-class.ts
tests/pages/api/: api.ts
