[metadata]
name = anaconda-cli-tests
version = 1.0.0
description = Test suite for Anaconda CLI authentication and workflows
author = Usama Tariq

[options]
packages = find:
package_dir = 
    = src
python_requires = >=3.8
install_requires =
    requests>=2.25.0
    pytest>=7.0.0
    pytest-playwright>=0.3.0
    playwright>=1.30.0
    python-dotenv>=0.19.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
markers =
    integration: integration tests that may be slower
python_files = test_*.py